adição material icons

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <div ng-app="myapp" ng-strict-di="">
     <login-buttons></login-buttons>
     <h1>
-      <a href="/myapp">Home</a>
+      <a href="/myapp">Home <md-icon>home</md-icon></a>
     </h1>
 
     <div ui-view=""></div>
